@@ -1,6 +1,9 @@
 2012-12-24 Graeme Gott <graeme@gottcode.org>
 	* Add support for compiling with Qt 5.0.0.
 
+2012-12-01 Graeme Gott <graeme@gottcode.org>
+	* Make daily value graph respect start value.
+
 2012-11-26 Graeme Gott <graeme@gottcode.org>
 	* Add start value to novel.
 
